--- a/src/app/layout/sidebar/sidebar.scss
+++ b/src/app/layout/sidebar/sidebar.scss
@@ -13,7 +13,7 @@
   writing-mode: sideways-lr;
   text-orientation: mixed;
   font-size: var(--fs-sm);
-  color: var(--common-white);
+  color: var(--sidebar-text);
   letter-spacing: 0.1em;
   text-transform: uppercase;
   user-select: none;
